# libKCD1

./: .gitignore  .gitmodules  KCSEAPI.h  README.md
.buildenv/: CMakeLists.txt  CMakePresets.json  CrySDKStubs.cpp  PCH.h  check_sizes.cpp  vcpkg.json
CryEngine/CryCommon/: StlUtils.h
KCSE/: KCSEAPI.h
Offsets/: Offsets.cpp  Offsets.h
Offsets/vtables/: IActionListener.h  IActor.h  IConsole.h  IEntity.h  IEntitySystem.h  IEntitySystemSink.h  IGameFramework.h  IGameObjectView.h  ILog.h  IScriptSystem.h  IScriptTable.h  ISystemEventListener.h  IUIElementEventListener.h  I_LocationListener.h  VCall.h
Projects/AutoSave/.buildenv/: CMakeLists.txt
Projects/FastTravelCancel/.buildenv/: CMakeLists.txt
Projects/FastTravelTweaks/.buildenv/: CMakeLists.txt
animationmodule/: C_AnimationDatabase.h  I_SceneListener.h
combatmodule/: C_CombatActionFactory.h  C_CombatActor.h  C_CombatActorActionAttack.h  C_CombatActorActionComposedRipostePerfectBlock.h  C_CombatActorActionFreeBlock.h  C_CombatActorActionGuard.h  C_CombatActorActionGuardMovement.h  C_CombatActorActionHit.h  C_CombatActorActionPerfectBlock.h  C_CombatActorActionRiderMovement.h  C_CombatActorActionSyncAttack.h  C_CombatActorActionSyncHit.h  C_CombatActorActionSyncPerfectBlock.h  C_CombatActorActionSyncPerfectBlockHit.h  C_CombatComboManager.h  C_CombatDatabase.h  C_CombatScene.h  C_CombatTrigger.h  C_CombatTriggerCombo.h  C_CombatTriggerSyncPerfectBlock.h  C_CombatTriggerSyncRiposte.h  I_CombatActionHelperOwner.h  I_CombatActor.h  I_CombatActorAction.h  I_CombatActorActionBlock.h  I_CombatTarget.h  S_CombatActorActionFreeBlockParams.h  S_CombatActorActionGuardSyncMovementParams.h  S_CombatActorActionHitParams.h  S_CombatActorActionPerfectBlockParams.h  S_CombatActorActionPoseModifierParams.h  S_CombatActorActionStaticAttackParams.h  S_CombatActorActionSyncAttackParams.h  S_CombatActorActionSyncHitParams.h  S_CombatActorActionSyncPerfectBlockHitParams.h  S_CombatActorActionSyncTransitionParams.h  S_CombatActorState.h  S_CombatSettings.h
crysystem/: CScriptSystem.h  CXConsole.h  SSystemGlobalEnvironment.h
databasemodule/: C_ColumnDescriptor.h  C_DatabaseModule.h  C_ObjectDatabaseBase.h  C_ObjectDatabaseManager.h  C_ObjectTableDatabase.h  C_ScriptBindDatabase.h  I_ColumnDescriptor.h  I_DatabaseListener.h  I_DatabaseModule.h  I_ObjectDatabase.h  I_TableSerializer.h  database_types.h
databasemodule/tables/: S_Achievement.h  S_AchievementRule.h  S_ActionTagMappingData.h  S_ActorActionFragmentIdMappingTableRow.h  S_ActorActionTypeTableRow.h  S_ActorActionTypeTableRow_2.h  S_ActorClassHashTableRow.h  S_ActorClassHashTableRow_2.h  S_ActorClassHashTableRow_3.h  S_ActorSideData.h  S_AiBodyTableRow_3.h  S_AiBodyTableRow_4.h  S_AiBodyTypeTableRow.h  S_AiPerceptHandlerTableRow.h  S_AiPerceptHandlerTypeTableRow.h  S_ArmorClassSurface.h  S_AttachmentBaseTableRow.h  S_AttachmentSlot.h  S_BodyLayerTableRow.h  S_BodyMaterialTableRow.h  S_BodyPartDataRow.h  S_BodySubpartDataRow.h  S_BrainMessageTypeTableRow.h  S_BrainMessageTypeTableRow_2.h  S_BrainMessageTypeTableRow_3.h  S_BrainSensorTypeTableRow.h  S_BrainTableRow.h  S_BrainTableRow_2.h  S_BrainTableRow_4.h  S_BrainVariableNameTableRow.h  S_BuffDefinition.h  S_ClothingAttachmentTableRow.h  S_ClothingPresetTableRow_2.h  S_ClothingPresetTableRow_3.h  S_ClothingRow.h  S_CombatActionFragmentIdMappingTableRow.h  S_CombatActionTriggerDBData.h  S_CombatActionTypeTableRow.h  S_CombatAttackTypeTableRow.h  S_CombatAttackTypeTableRow_2.h  (+203 more)
dialogmodule/: C_ScriptBindDialog.h
entitymodule/: CScriptBindBoids.h  C_Actor.h  C_Human.h  C_ScriptBindActor.h  C_ScriptBindEntityModule.h  C_ScriptBindGameRules.h  C_ScriptBindHorse.h  C_ScriptBindHuman.h  C_ScriptBindInteractiveObject.h  C_ScriptBindInventory.h  C_ScriptBindItemManager.h  C_ScriptBindPickableItem.h  C_ScriptBindPlayer.h  I_EquipmentManagerListener.h  I_ExactPosHelperListener.h
environmentmodule/: C_ScriptBindEnvironment.h
framework/: C_Action.h  C_BaseModule.h  C_HashMap.h  C_ModuleMessage.h  C_ScriptBindFramework.h  C_ScriptBindTrace.h  C_ScriptBindVariables.h  C_Signal.h  CryDeferrable.h  I_Action.h  I_ReadinessDebuggable.h  I_WUIDMappingProvider.h  S_TypeFactoryEntry.h
game/: CScriptBindGame.h  S_GameContext.h
guimodule/: CUIManager.h  C_ScriptBindMap.h  C_UIMap.h  C_UIMapCloudAtlas.h  SSpatialBucketContainer.h  SUIEventSenderBlock.h
include/: kcd.h
include/Offsets/: Offsets.h  Offsets_RTTI.h  Offsets_VTABLE.h  RTTI.h
include/animationmodule/: I_SceneListener.h
include/combatmodule/: C_CombatActionFactory.h  C_CombatActionHelper.h  C_CombatActionSyncAttackData.h  C_CombatActionSyncHitData.h  C_CombatActionTypeData.h  C_CombatActor.h  C_CombatActorActionAttack.h  C_CombatActorActionBlock.h  C_CombatActorActionBlockTrigger.h  C_CombatActorActionComposedRipostePerfectBlock.h  C_CombatActorActionFreeBlock.h  C_CombatActorActionGuard.h  C_CombatActorActionGuardMovement.h  C_CombatActorActionGuardSyncMovement.h  C_CombatActorActionHit.h  C_CombatActorActionManager.h  C_CombatActorActionPerfectBlock.h  C_CombatActorActionPoseModifier.h  C_CombatActorActionRiderMovement.h  C_CombatActorActionStaticAttack.h  C_CombatActorActionSyncAttack.h  C_CombatActorActionSyncHit.h  C_CombatActorActionSyncPerfectBlock.h  C_CombatActorActionSyncPerfectBlockHit.h  C_CombatActorActionSyncTransition.h  (+44 more)
playermodule/: C_FastTravel.h  C_FastTravelScriptBind.h  C_PlayerModule.h  C_ScriptBindBackgammon.h  C_ScriptBindMinigame.h  C_ScriptBindTutorial.h  C_ScriptBind_Alchemy.h  C_ScriptBind_Dice.h  C_ScriptBind_Sharpening.h  I_RandomEventListener.h
questmodule/: C_ScriptBindQuest.h
rpgmodule/: C_Effect.h  C_FactionScriptBind.h  C_LocationScriptBind.h  C_POI.h  C_PerkList.h  C_RPGModule.h  C_ScriptBindCalendar.h  C_ScriptBindRPGModule.h  C_ScriptBindSoul.h  C_ScriptBindStatistics.h  C_ScriptbindBarber.h  C_Soul.h  C_SoulPropertyNotifier.h  I_POI.h  I_SoulResolver.h  S_PerkPointCounters.h
shopmodule/: C_ScriptBindShop.h
src/: plugin.cpp  vtable_hook.h
xgenaimodule/: C_ScriptBindSmartObject.h  C_ScriptBindXGenAIModule.h  I_NoRTTITypeInfo.h
(+950 files in other folders)
